[package]
name        = "xskiplist"
version     = "0.1.0"
authors     = ["Norm O <normo.pub@gmail.com>"]
description = "Skiplist implementation in rust, providing fast insertion and removal.  A normal skiplist is implemented, as well as an ordered skiplist and a skipmap."
keywords    = ["collection", "skiplist", "sorted"]

documentation = "https://docs.rs/skiplist"
homepage      = "https://www.jpellis.me/projects/rust-skiplist/"
repository    = "https://www.github.com/normano/rust-skiplist/"

readme = "README.md"

license = "MIT"
edition = "2021"

[badges]
codecov = { repository = "normano/rust-skiplist", branch = "main", service = "github" }

[dependencies]
rand = { version = "^0.9", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name    = "main"
harness = false
